fix Places overflow styles

--- a/src/pages/Home/sections/Places/Places.scss
+++ b/src/pages/Home/sections/Places/Places.scss
@@ -3,14 +3,8 @@
 
 .places {
   white-space: nowrap;
-  @include media-tablet {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-  }
 
   &.content {
-    padding: 0;
     border-style: solid;
     padding: 5px 20px;
     border-color: $color-secondary-gray600;
@@ -18,6 +12,7 @@
     border-bottom-width: 1px;
     border-left-width: 0px;
     border-right-width: 0px;
+    overflow: hidden;
   }
 
   & .place-container {
@@ -29,7 +24,13 @@
     font-size: 20px;
     line-height: 28px;
     letter-spacing: 0;
+    overflow: hidden;
     color: $color-primary-black;
+    @include media-tablet {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 24px;
+    }
   }
 
   & .place {
